fixed alignment and cleaned html

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ h2 {
 
 p {
    color: red;
+   float: left;
 }
 
 a {
